# nuggetindex

./: .editorconfig  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/nuggetindex/: __init__.py  auto.py
src/nuggetindex/adapters/: __init__.py  base.py  elasticsearch.py  haystack_corpus.py  jsonl.py  llamaindex_corpus.py  opensearch.py  pinecone.py  qdrant.py  vespa.py  web_search.py
src/nuggetindex/audit/: __init__.py  api.py  cost.py  discover.py  doctor.py  seeds.py
src/nuggetindex/chains/: __init__.py  models.py  resolver.py
src/nuggetindex/cli/: __init__.py  app.py  audit.py  auto.py  build.py  chain.py  diff.py  doctor.py  estimate_cost.py  eval.py  inspect.py  judge_replay.py  query.py  resolve.py  review.py  schema.py  seeds.py  serve.py
src/nuggetindex/core/: enums.py  errors.py  models.py  schema.py
src/nuggetindex/eval/: __init__.py  benchmarks.py  harness.py  metrics.py
src/nuggetindex/evaluation/: __init__.py  dataset_adapter.py  ragas.py
src/nuggetindex/extractors/: __init__.py  base.py  cache.py  llm.py  quality.py  trigger.py
src/nuggetindex/governance/: __init__.py  postprocessor.py  session_cache.py
src/nuggetindex/integrations/: __init__.py
src/nuggetindex/pipeline/: __init__.py  aliases.py  canonicalize.py  conflict.py  constructor.py  dedup.py  entity_types.py  judge.py  object_validator.py  temporal.py
src/nuggetindex/retrieve/: __init__.py  fusion.py  retriever.py
src/nuggetindex/serve/: __init__.py  app.py  deps.py  jobs.py  schemas.py
src/nuggetindex/sidecar/: __init__.py  context.py  freshness.py  jit_cache.py  modes.py  router.py  sidecar.py
src/nuggetindex/store/: __init__.py  base.py  dense.py  sparse.py
src/nuggetindex/utils/: hashing.py
tests/: conftest.py  test_smoke.py
tests/fixtures/: __init__.py  rule_based_extractor.py
tests/fixtures/llm_transcripts/: anthropic_extraction_01.json  google_extraction_01.json  ollama_extraction_01.json  openai_compat_extraction_01.json  openai_extraction_01.json  openrouter_extraction_01.json
tests/integration/: test_chains_end_to_end.py  test_rule_based_idempotent.py  test_semantic_dedup_wiring.py  test_store_ingest.py
tests/integration/haystack/: conftest.py  test_chain_retriever.py  test_constructor.py  test_document_store.py  test_document_store_base.py  test_import_hygiene.py  test_retriever.py
tests/integration/langchain/: conftest.py  test_chain_retriever.py  test_governance_filter.py  test_import_hygiene.py  test_loader.py  test_retriever.py
tests/integration/llamaindex/: conftest.py  test_chain_retriever.py  test_import_hygiene.py  test_ingestion.py  test_postprocessor.py  test_retriever.py
tests/integration/searxng/: test_real_captcha.py
tests/unit/: test_auto.py  test_auto_bootstrap.py  test_auto_cost.py  test_auto_two_pass.py  test_deprecation_internal_reach.py
tests/unit/adapters/: test_elasticsearch_corpus.py  test_haystack_corpus.py  test_jsonl_corpus.py  test_llamaindex_corpus.py  test_opensearch_corpus.py  test_pinecone_corpus.py  test_qdrant_corpus.py  test_vespa_corpus.py  test_web_search.py
tests/unit/audit/: __init__.py  test_api.py  test_cost.py  test_discover.py  test_doctor_deep_mode.py  test_doctor_fast_mode.py  test_doctor_surface.py  test_heuristics_language.py  test_heuristics_ner.py  test_heuristics_sample.py  test_heuristics_sample_dedup.py  test_heuristics_sample_domain.py  test_heuristics_simhash.py  test_heuristics_timex.py  test_heuristics_triggers.py  test_seeds.py  test_staleness_heuristic.py
tests/unit/chains/: conftest.py  test_canonicalisation.py  test_join.py  test_models.py  test_rename.py  test_resolver.py  test_succession.py
tests/unit/cli/: test_app.py  test_audit.py  test_auto_cli.py  test_build.py  test_chain.py  test_diff.py  test_doctor_cli.py  test_inspect.py  test_judge_replay.py  test_query.py  test_resolve.py  test_review.py  test_schema_discover_cli.py  test_seeds_cli.py  test_serve_cli.py
tests/unit/core/: test_arg_types.py  test_cardinality.py  test_chain_errors.py  test_enums.py  test_epistemic_state.py  test_errors.py  test_fact_triple.py  test_fact_triple_types.py  test_nugget.py  test_provenance.py  test_schema.py  (+3 more)
(+146 files in other folders)
